# zipper-ag-review

./: .gitignore  .travis.yml  LICENSE  README.md  build-pdf.sh  index.html  stack.yaml  zipper-ag-review.cabal
doc/: Paper.tex
paper/: AGs.lhs  Let.lhs  Makefile  Paper.lhs  References.bib  Zippers.lhs  ags.lhs  zippers.lhs
src/: Paper.lhs  Paper.tex  References.bib
src/Language/AG/: Constraint.hs  Zipper.hs
src/Language/AG/Example/: Repmin.hs
