name:                zipper-ag-review
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/twesterhout/zipper-ag-review#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          t.westerhout@student.ru.nl
copyright:           (c) 2018 Tom Westerhout
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/llncs.cls
                   , src/References.bib

executable paper
  hs-source-dirs:      src
  main-is:             Paper.lhs 
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , hspec
