name:                zipper-ag-review
version:             0.1.0.0
-- synopsis:
-- description:
package-url:         https://github.com/twesterhout/zipper-ag-review
homepage:            https://github.com/twesterhout/zipper-ag-review#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          t.westerhout@student.ru.nl
copyright:           (c) 2018 Tom Westerhout
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , index.html
                   , paper/llncs.cls
                   , paper/splncs04.bst
                   , paper/References.bib

library
  hs-source-dirs:      src
  exposed-modules:     Language.AG.Zipper
                     , Language.AG.Constraint
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-orphans
  build-depends:       base >=4.7 && <5
                     , data-default-class
                     , vinyl
                     , deepseq
                     , constraints
                     , generic-deriving
                     , transformers
  default-extensions:  BangPatterns
                       -- ConstraintKinds
                       -- DataKinds
                       DeriveDataTypeable
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       -- GADTs
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       -- RankNTypes
                       -- ScopedTypeVariables
                       -- TypeApplications
                       -- TypeFamilies
                       -- TypeInType
                       -- TypeOperators

executable paper
  hs-source-dirs:      paper
  main-is:             Paper.lhs 
  other-modules:       Zippers
                     , AGs
                     , Let
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , base-unicode-symbols
                     , hspec
                     , zipper-ag-review
